--- a/index.html
+++ b/index.html
@@ -6,38 +6,25 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Green shop</title>
-
+    <title>GREENSHOP</title>
 </head>
 <body>
-<form name="login-register" method="post" action="">
-    <div class="modal">
-        <div>
-            <a href="#"> <img src="images/cross.svg" alt="cross"> </a>
-        </div>
-        <div>
-            <p class="logRegP">Login | <span>Register</span></p>
-            <p class="textReg">Enter your email and password to register.</p>
-        </div>
-        <div>
-            <input name="user_name" type="text" placeholder="Username" id="user_name">
-        </div>
-        <div>
-            <input name="email" type="email" placeholder="Enter your email address" id="email">
-        </div>
-        <div>
-            <input name="password" type="password" placeholder="Password" id="password">
-        </div>
-        <div>
-            <input name="confirmPassword" type="password" placeholder="Confirm Password" id="confirmPassword">
-        </div>
-        <button type="submit">Register</button>
-        <div class="regTitle"><p>Or register with</p></div>
-        <a href="#" class="loginLinks"><img src="images/googleIcon.svg" alt="googleIcon">Continue with Google</a>
-        <a href="#" class="loginLinks"><img src="images/facebookIcon.svg" alt="facebookIcon">Continue with Facebook</a>
+<header>
+    <div class="container">
+        <a href="#"><img src="images/logo.svg" alt="logo"></a>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Plant Care</a></li>
+                <li><a href="#">Blogs</a></li>
+            </ul>
+        </nav>
+        <a href="#" class="login_btn"><img src="images/Logout.svg" alt="logout">Login</a>
     </div>
-</form>
+</header>
+<main></main>
+<footer></footer>
 </body>
 </html>
