--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
         <a href="#"><img src="images/logo.svg" alt="logo"></a>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Plant Care</a></li>
-                <li><a href="#">Blogs</a></li>
+                <li><a href="#" class="links_nav">Home</a></li>
+                <li><a href="#" class="links_nav">Shop</a></li>
+                <li><a href="#" class="links_nav">Plant Care</a></li>
+                <li><a href="#" class="links_nav">Blogs</a></li>
             </ul>
         </nav>
-        <a href="#" class="login_btn"><img src="images/Logout.svg" alt="logout">Login</a>
+        <a href="#" class="login_link_index"><img src="images/Logout.svg" alt="logout">Login</a>
     </div>
 </header>
-<main></main>
+<main>
+</main>
 <footer></footer>
 </body>
 </html>
