--- a/registration.html
+++ b/registration.html
@@ -17,25 +17,25 @@
             <a href="#"> <img src="images/cross.svg" alt="cross"> </a>
         </div>
         <div>
-            <p class="logRegP">Login | <span>Register</span></p>
-            <p class="textReg">Enter your email and password to register.</p>
+            <p>Login | <span class="span_reg_title">Register</span></p>
+            <p class="text_reg">Enter your email and password to register.</p>
         </div>
         <div>
-            <input name="user_name" type="text" placeholder="Username" id="user_name">
+            <input name="user_name" type="text" placeholder="Username" id="user_name" class="input_registration">
         </div>
         <div>
-            <input name="email" type="email" placeholder="Enter your email address" id="email">
+            <input name="email" type="email" placeholder="Enter your email address" id="email" class="input_registration">
         </div>
         <div>
-            <input name="password" type="password" placeholder="Password" id="password">
+            <input name="password" type="password" placeholder="Password" id="password" class="input_registration">
         </div>
         <div>
-            <input name="confirmPassword" type="password" placeholder="Confirm Password" id="confirmPassword">
+            <input name="confirmPassword" type="password" placeholder="Confirm Password" id="confirmPassword" class="input_registration">
         </div>
-        <button type="submit">Register</button>
-        <div class="regTitle"><p>Or register with</p></div>
-        <a href="#" class="loginLinks"><img src="images/googleIcon.svg" alt="googleIcon" class="chromeLogo">Continue with Google</a>
-        <a href="#" class="loginLinks"><img src="images/facebookIcon.svg" alt="facebookIcon" class="facebookLogo" >Continue with Facebook</a>
+        <button type="submit" class="button_reg">Register</button>
+        <div class="reg_title"><p>Or register with</p></div>
+        <a href="#" class="login_links registration_a"><img src="images/googleIcon.svg" alt="googleIcon" class="chrome_logo">Continue with Google</a>
+        <a href="#" class="login_links registration_a"><img src="images/facebookIcon.svg" alt="facebookIcon" class="facebook_logo" >Continue with Facebook</a>
     </div>
 </form>
 </body>
