--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <header>
-    <div class="container">
+    <div class="container_header">
         <a href="#"><img src="images/logo.svg" alt="logo"></a>
         <nav>
             <ul>
@@ -25,6 +25,8 @@
     </div>
 </header>
 <main>
+    <div class="container_main">
+    </div>
 </main>
 <footer></footer>
 </body>
