--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#" class="links_nav">Blogs</a></li>
             </ul>
         </nav>
-        <a href="registration.html" class="login_link_index"><img src="images/Logout.svg" alt="logout">Login</a>
+        <a href="registration.html" class="login_link_index"><img src="images/Logout.svg" alt="logout" class="logout_img">Login</a>
     </div>
 </header>
 <main>
