--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <a href="#"><img src="images/logo.svg" alt="logo"></a>
         <nav>
             <ul>
-                <li><a href="#" class="links_nav">Home</a></li>
-                <li><a href="#" class="links_nav">Shop</a></li>
-                <li><a href="#" class="links_nav">Plant Care</a></li>
-                <li><a href="#" class="links_nav">Blogs</a></li>
+                <li class="links_nav_li"><a href="#" class="links_nav">Home</a></li>
+                <li class="links_nav_li"><a href="#" class="links_nav">Shop</a></li>
+                <li class="links_nav_li"><a href="#" class="links_nav">Plant Care</a></li>
+                <li class="links_nav_li"><a href="#" class="links_nav">Blogs</a></li>
             </ul>
         </nav>
         <a href="registration.html" class="login_link_index"><img src="images/Logout.svg" alt="logout" class="logout_img">Login</a>
