--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <div class="container_header">
         <a href="#"><img src="images/logo.svg" alt="logo"></a>
         <nav>
-            <ul>
-                <li class="links_nav_li"><a href="#" class="links_nav">Home</a></li>
-                <li class="links_nav_li"><a href="#" class="links_nav">Shop</a></li>
-                <li class="links_nav_li"><a href="#" class="links_nav">Plant Care</a></li>
-                <li class="links_nav_li"><a href="#" class="links_nav">Blogs</a></li>
+            <ul class="links_nav_ul">
+                <li><a href="#" class="links_nav">Home</a></li>
+                <li><a href="#" class="links_nav">Shop</a></li>
+                <li><a href="#" class="links_nav">Plant Care</a></li>
+                <li><a href="#" class="links_nav">Blogs</a></li>
             </ul>
         </nav>
         <a href="registration.html" class="login_link_index"><img src="images/Logout.svg" alt="logout" class="logout_img">Login</a>
@@ -26,6 +26,7 @@
 </header>
 <main>
     <div class="container_main">
+
     </div>
 </main>
 <footer></footer>
