--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <header>
     <div class="container_header">
         <a href="#"><img src="images/logo.svg" alt="logo"></a>
+<!---перенести в css-->
         <nav>
             <ul class="links_nav_ul">
                 <li><a href="#" class="links_nav">Home</a></li>
