Reworked nav and added fonts

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <header>
     <div class="container_header">
         <a href="#"><img src="images/logo.svg" alt="logo"></a>
-<!---перенести в css-->
         <nav>
             <ul class="links_nav_ul">
                 <li><a href="#" class="links_nav">Home</a></li>
@@ -22,14 +21,32 @@
                 <li><a href="#" class="links_nav">Blogs</a></li>
             </ul>
         </nav>
-        <a href="registration.html" class="login_link_index"><img src="images/Logout.svg" alt="logout" class="logout_img">Login</a>
+        <a href="registration.html" class="login_link_index">Login</a>
     </div>
 </header>
 <main>
     <div class="container_main">
-
+        <section class="first_section">
+            <div class="welcome_info">
+                <h3>
+                    Welcome to greenshop
+                </h3>
+                <h1>
+                    Let's Make a better <span class="planet_title">planet</span>
+                </h1>
+                <h3>
+                    We are an online plant shop offering a wide range of cheap and trendy plants. Use our plants to
+                    create an unique Urban Jungle. Order your favorite plants!
+                </h3>
+                <a href="#">Shop now</a>
+            </div>
+            <div>
+                <img src="images/flowers.png" alt="flowers">
+            </div>
+        </section>
     </div>
 </main>
 <footer></footer>
+
 </body>
 </html>
