--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <a href="#"><img src="images/logo.svg" alt="logo"></a>
         <nav>
             <ul class="links_nav_ul">
-                <li><a href="#" class="links_nav">Home</a></li>
-                <li><a href="#" class="links_nav">Shop</a></li>
-                <li><a href="#" class="links_nav">Plant Care</a></li>
-                <li><a href="#" class="links_nav">Blogs</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Plant Care</a></li>
+                <li><a href="#">Blogs</a></li>
             </ul>
         </nav>
         <a href="registration.html" class="login_link_index">Login</a>
@@ -28,25 +28,40 @@
     <div class="container_main">
         <section class="first_section">
             <div class="welcome_info">
-                <h3>
+                <h2>
                     Welcome to greenshop
-                </h3>
+                </h2>
                 <h1>
                     Let's Make a better <span class="planet_title">planet</span>
                 </h1>
-                <h3>
+                <h2>
                     We are an online plant shop offering a wide range of cheap and trendy plants. Use our plants to
-                    create an unique Urban Jungle. Order your favorite plants!
-                </h3>
+                    create unique Urban Jungle. Order your favorite plants!
+                </h2>
                 <a href="#">Shop now</a>
             </div>
             <div>
-                <img src="images/flowers.png" alt="flowers">
+                <img src="images/Flowers.png" alt="flowers">
+            </div>
+        </section>
+        <section class="catalog">
+            <div>
+                <h3>Categories</h3>
+                <ul>
+                    <li><a href="#">House Plants</a></li>
+                    <li><a href="#">Potter Plants</a></li>
+                    <li><a href="#">Seed</a></li>
+                    <li><a href="#">Small Plants</a></li>
+                    <li><a href="#">Big Plants</a></li>
+                    <li><a href="#">Succulents</a></li>
+                    <li><a href="#">Terrariums</a></li>
+                    <li><a href="#">Gardening</a></li>
+                    <li><a href="#">Accessories</a></li>
+                </ul>
             </div>
         </section>
     </div>
 </main>
 <footer></footer>
-
 </body>
 </html>
