--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <ul>
                     <li><a href="#">House Plants</a></li>
                     <li><a href="#">Potter Plants</a></li>
-                    <li><a href="#">Seed</a></li>
+                    <li><a href="#">Seeds</a></li>
                     <li><a href="#">Small Plants</a></li>
                     <li><a href="#">Big Plants</a></li>
                     <li><a href="#">Succulents</a></li>
