--- a/index.html
+++ b/index.html
@@ -44,19 +44,79 @@
         </div>
     </section>
     <section class="catalog">
-        <div>
-            <h3>Categories</h3>
-            <ul>
-                <li><a href="#">House Plants</a></li>
-                <li><a href="#">Potter Plants</a></li>
-                <li><a href="#">Seeds</a></li>
-                <li><a href="#">Small Plants</a></li>
-                <li><a href="#">Big Plants</a></li>
-                <li><a href="#">Succulents</a></li>
-                <li><a href="#">Terrariums</a></li>
-                <li><a href="#">Gardening</a></li>
-                <li><a href="#">Accessories</a></li>
-            </ul>
+        <div class="catalog_first_block">
+            <div>
+                <h3>Categories</h3>
+                <ul>
+                    <li><a href="#">House Plants</a></li>
+                    <li><a href="#">Potter Plants</a></li>
+                    <li><a href="#">Seeds</a></li>
+                    <li><a href="#">Small Plants</a></li>
+                    <li><a href="#">Big Plants</a></li>
+                    <li><a href="#">Succulents</a></li>
+                    <li><a href="#">Terrariums</a></li>
+                    <li><a href="#">Gardening</a></li>
+                    <li><a href="#">Accessories</a></li>
+                </ul>
+            </div>
+            <img src="images/banner_super_sale.png" alt="banner_super_sale">
+        </div>
+        <div class="catalog_second_block">
+            <div class="catalog_second_block_head">
+                <ul>
+                    <li>All Plants</li>
+                    <li>New Arrivals</li>
+                    <li>Sale</li>
+                </ul>
+                <p>Short by: Default sorting</p>
+            </div>
+            <div class="cards_of_items">
+                <div>
+                    <div><img src="images/barberton_daisy.png" alt="barberton_daisy"></div>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div>
+                    <div><img src="images/angel_wing_begonia.png" alt="angel_wing_begonia"></div>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div>
+                    <div><img src="images/african_violet.png" alt="african_violet"></div>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div>
+                    <div><img src="images/beach_spider_lily.png" alt="beach_spider_lily"></div>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div>
+                    <div><img src="images/blushing_bromeliad.png" alt="blushing_bromeliad"></div>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div>
+                    <div><img src="images/aluminum_plant.png" alt="aluminum_plant"></div>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div>
+                    <div><img src="images/birds_nest_fern.png" alt="birds_nest_fern"></div>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div>
+                    <div><img src="images/broadleaf_lady_palm.png" alt="broadleaf_lady_palm"></div>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div>
+                    <div><img src="images/chinese_evergreen.png" alt="chinese_evergreen"></div>
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
         </div>
     </section>
 </main>
