--- a/index.html
+++ b/index.html
@@ -73,49 +73,58 @@
             <div class="cards_of_items">
                 <div>
                     <div><img src="images/barberton_daisy.png" alt="barberton_daisy"></div>
-                    <p></p>
-                    <p></p>
+                    <p>Barberton Daisy</p>
+                    <p>$119.00</p>
                 </div>
                 <div>
                     <div><img src="images/angel_wing_begonia.png" alt="angel_wing_begonia"></div>
-                    <p></p>
-                    <p></p>
+                    <p>Angel Wing Begonia</p>
+                    <p>$169.00</p>
                 </div>
                 <div>
                     <div><img src="images/african_violet.png" alt="african_violet"></div>
-                    <p></p>
-                    <p></p>
+                    <p>African Violet</p>
+                    <p>$199.00</p>
                 </div>
                 <div>
                     <div><img src="images/beach_spider_lily.png" alt="beach_spider_lily"></div>
-                    <p></p>
-                    <p></p>
+                    <p>Beach Spider Lily</p>
+                    <p>$129.00</p>
                 </div>
                 <div>
                     <div><img src="images/blushing_bromeliad.png" alt="blushing_bromeliad"></div>
-                    <p></p>
-                    <p></p>
+                    <p>Blushing Bromeliad</p>
+                    <p>$139.00</p>
                 </div>
                 <div>
                     <div><img src="images/aluminum_plant.png" alt="aluminum_plant"></div>
-                    <p></p>
-                    <p></p>
+                    <p>Aluminum Plant</p>
+                    <p>$179.00</p>
                 </div>
                 <div>
                     <div><img src="images/birds_nest_fern.png" alt="birds_nest_fern"></div>
-                    <p></p>
-                    <p></p>
+                    <p>Bird's Nest Fern</p>
+                    <p>$99.00</p>
                 </div>
                 <div>
                     <div><img src="images/broadleaf_lady_palm.png" alt="broadleaf_lady_palm"></div>
-                    <p></p>
-                    <p></p>
+                    <p>Broadleaf Lady Palm</p>
+                    <p>$59.00</p>
                 </div>
                 <div>
                     <div><img src="images/chinese_evergreen.png" alt="chinese_evergreen"></div>
-                    <p></p>
-                    <p></p>
+                    <p>Chinese Evergreen</p>
+                    <p>$39.00</p>
                 </div>
+            </div>
+            <div class="catalog_second_block_links">
+                <ul>
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#"><img src="images/Arrow_Right_2.svg" alt="Arrow_Right"></a></li>
+                </ul>
             </div>
         </div>
     </section>
