--- a/index.html
+++ b/index.html
@@ -64,58 +64,58 @@
         <div class="catalog_second_block">
             <div class="catalog_second_block_head">
                 <ul>
-                    <li>All Plants</li>
-                    <li>New Arrivals</li>
-                    <li>Sale</li>
+                    <li><a href="#">All Plants</a></li>
+                    <li><a href="#">New Arrivals</a></li>
+                    <li><a href="#">Sale</a></li>
                 </ul>
                 <p>Short by: Default sorting</p>
             </div>
             <div class="cards_of_items">
-                <div>
+                <article>
                     <div><img src="images/barberton_daisy.png" alt="barberton_daisy"></div>
                     <p>Barberton Daisy</p>
                     <p>$119.00</p>
-                </div>
-                <div>
+                </article>
+                <article>
                     <div><img src="images/angel_wing_begonia.png" alt="angel_wing_begonia"></div>
                     <p>Angel Wing Begonia</p>
                     <p>$169.00</p>
-                </div>
-                <div>
+                </article>
+                <article>
                     <div><img src="images/african_violet.png" alt="african_violet"></div>
                     <p>African Violet</p>
                     <p>$199.00</p>
-                </div>
-                <div>
+                </article>
+                <article>
                     <div><img src="images/beach_spider_lily.png" alt="beach_spider_lily"></div>
                     <p>Beach Spider Lily</p>
                     <p>$129.00</p>
-                </div>
-                <div>
+                </article>
+                <article>
                     <div><img src="images/blushing_bromeliad.png" alt="blushing_bromeliad"></div>
                     <p>Blushing Bromeliad</p>
                     <p>$139.00</p>
-                </div>
-                <div>
+                </article>
+                <article>
                     <div><img src="images/aluminum_plant.png" alt="aluminum_plant"></div>
                     <p>Aluminum Plant</p>
                     <p>$179.00</p>
-                </div>
-                <div>
+                </article>
+                <article>
                     <div><img src="images/birds_nest_fern.png" alt="birds_nest_fern"></div>
                     <p>Bird's Nest Fern</p>
                     <p>$99.00</p>
-                </div>
-                <div>
+                </article>
+                <article>
                     <div><img src="images/broadleaf_lady_palm.png" alt="broadleaf_lady_palm"></div>
                     <p>Broadleaf Lady Palm</p>
                     <p>$59.00</p>
-                </div>
-                <div>
+                </article>
+                <article>
                     <div><img src="images/chinese_evergreen.png" alt="chinese_evergreen"></div>
                     <p>Chinese Evergreen</p>
                     <p>$39.00</p>
-                </div>
+                </article>
             </div>
             <div class="catalog_second_block_links">
                 <ul>
