--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <div class="cards_of_items">
                 <article>
                     <div><img src="images/barberton_daisy.png" alt="barberton_daisy"></div>
+                    <!--                    поставить статичный размер картинкам-->
                     <p>Barberton Daisy</p>
                     <p>$119.00</p>
                 </article>
@@ -125,6 +126,68 @@
                     <li><a href="#">4</a></li>
                     <li><a href="#"><img src="images/Arrow_Right_2.svg" alt="Arrow_Right"></a></li>
                 </ul>
+            </div>
+        </div>
+    </section>
+    <section class="summer_collection">
+        <div class="container_third_section">
+            <article>
+                <img src="images/image_14.png" alt="flower">
+                <div>
+                    <h3>Summer cactus
+                        & succulents</h3>
+                    <p>We are an online plant shop offering a wide range of cheap and trendy plants</p>
+                    <a href="#">Find More</a>
+                </div>
+            </article>
+            <article>
+                <img src="images/image_15.png" alt="flower">
+                <div>
+                    <h3>Styling Trends
+                        & much more</h3>
+                    <p>We are an online plant shop offering a wide range of cheap and trendy plants</p>
+                    <a href="#">Find More</a>
+                </div>
+            </article>
+        </div>
+    </section>
+    <section class="blog">
+        <div class="container">
+            <h2>Our Blog Posts</h2>
+            <p>We are an online plant shop offering a wide range of cheap and trendy plants. </p>
+            <div class="articles">
+                <article>
+                    <img src="images/01.jpg" alt="flower">
+                    <p>September 12  I Read in 6 minutes</p>
+                    <h3>Cactus & Succulent
+                        Care Tips</h3>
+                    <p>Cacti are succulents are easy care plants for any home or patio. </p>
+                    <a href="#">Read More</a>
+                </article>
+                <article>
+                    <img src="images/02.png" alt="flower">
+                    <p>September 13  I Read in 2 minutes</p>
+                    <h3>Cactus & Succulent
+                        Care Tips</h3>
+                    <p>Cacti are succulents are easy care plants for any home or patio. </p>
+                    <a href="#">Read More</a>
+                </article>
+                <article>
+                    <img src="images/03.png" alt="flower">
+                    <p>September 15  I Read in 3 minutes</p>
+                    <h3>Cactus & Succulent
+                        Care Tips</h3>
+                    <p>Cacti are succulents are easy care plants for any home or patio. </p>
+                    <a href="#">Read More</a>
+                </article>
+                <article>
+                    <img src="images/04.png" alt="flower">
+                    <p>September 12  I Read in 6 minutes</p>
+                    <h3>Cactus & Succulent
+                        Care Tips</h3>
+                    <p>Cacti are succulents are easy care plants for any home or patio. </p>
+                    <a href="#">Read More</a>
+                </article>
             </div>
         </div>
     </section>
