added new section

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="articles">
                 <article>
                     <img src="images/01.jpg" alt="flower">
-                    <p>September 12  I Read in 6 minutes</p>
+                    <p>September 12 | Read in 6 minutes</p>
                     <h3>Cactus & Succulent
                         Care Tips</h3>
                     <p>Cacti are succulents are easy care plants for any home or patio. </p>
@@ -166,26 +166,26 @@
                 </article>
                 <article>
                     <img src="images/02.png" alt="flower">
-                    <p>September 13  I Read in 2 minutes</p>
-                    <h3>Cactus & Succulent
-                        Care Tips</h3>
-                    <p>Cacti are succulents are easy care plants for any home or patio. </p>
+                    <p>September 13 | Read in 2 minutes</p>
+                    <h3>Top 10 Succulents for
+                        Your Home</h3>
+                    <p>Best in hanging baskets. Prefers medium to highlight.</p>
                     <a href="#">Read More</a>
                 </article>
                 <article>
                     <img src="images/03.png" alt="flower">
-                    <p>September 15  I Read in 3 minutes</p>
-                    <h3>Cactus & Succulent
+                    <p>September 15 | Read in 3 minutes</p>
+                    <h3>Cacti & Succulent
                         Care Tips</h3>
-                    <p>Cacti are succulents are easy care plants for any home or patio. </p>
+                    <p>Cacti and succulents thrive in containers and because most are...</p>
                     <a href="#">Read More</a>
                 </article>
                 <article>
                     <img src="images/04.png" alt="flower">
-                    <p>September 12  I Read in 6 minutes</p>
-                    <h3>Cactus & Succulent
-                        Care Tips</h3>
-                    <p>Cacti are succulents are easy care plants for any home or patio. </p>
+                    <p>September 15 | Read in 2 minutes</p>
+                    <h3>Best Houseplants
+                        Room by Room</h3>
+                    <p>The benefits of houseplants are endless. In addition to..</p>
                     <a href="#">Read More</a>
                 </article>
             </div>
