added new section and added styles

--- a/index.html
+++ b/index.html
@@ -72,50 +72,68 @@
             </div>
             <div class="cards_of_items">
                 <article>
-                    <div><img src="images/barberton_daisy.png" alt="barberton_daisy"></div>
-                    <!--                    поставить статичный размер картинкам-->
-                    <p>Barberton Daisy</p>
-                    <p>$119.00</p>
+                    <a href="#">
+                        <div><img src="images/barberton_daisy.png" alt="barberton_daisy"></div>
+                        <p>Barberton Daisy</p>
+                        <p>$119.00</p>
+                    </a>
                 </article>
                 <article>
-                    <div><img src="images/angel_wing_begonia.png" alt="angel_wing_begonia"></div>
-                    <p>Angel Wing Begonia</p>
-                    <p>$169.00</p>
+                    <a href="#">
+                        <div><img src="images/angel_wing_begonia.png" alt="angel_wing_begonia"></div>
+                        <p>Angel Wing Begonia</p>
+                        <p>$169.00</p>
+                    </a>
                 </article>
                 <article>
-                    <div><img src="images/african_violet.png" alt="african_violet"></div>
-                    <p>African Violet</p>
-                    <p>$199.00</p>
+                    <a href="#">
+                        <div><img src="images/african_violet.png" alt="african_violet"></div>
+                        <p>African Violet</p>
+                        <p>$199.00</p>
+                    </a>
                 </article>
                 <article>
-                    <div><img src="images/beach_spider_lily.png" alt="beach_spider_lily"></div>
-                    <p>Beach Spider Lily</p>
-                    <p>$129.00</p>
+                    <a href="#">
+                        <div><img src="images/beach_spider_lily.png" alt="beach_spider_lily" class="img_spider_lily">
+                        </div>
+                        <p>Beach Spider Lily</p>
+                        <p>$129.00</p>
+                    </a>
                 </article>
                 <article>
-                    <div><img src="images/blushing_bromeliad.png" alt="blushing_bromeliad"></div>
-                    <p>Blushing Bromeliad</p>
-                    <p>$139.00</p>
+                    <a href="#">
+                        <div><img src="images/blushing_bromeliad.png" alt="blushing_bromeliad"></div>
+                        <p>Blushing Bromeliad</p>
+                        <p>$139.00</p>
+                    </a>
                 </article>
                 <article>
-                    <div><img src="images/aluminum_plant.png" alt="aluminum_plant"></div>
-                    <p>Aluminum Plant</p>
-                    <p>$179.00</p>
+                    <a href="#">
+                        <div><img src="images/aluminum_plant.png" alt="aluminum_plant"></div>
+                        <p>Aluminum Plant</p>
+                        <p>$179.00</p>
+                    </a>
                 </article>
                 <article>
-                    <div><img src="images/birds_nest_fern.png" alt="birds_nest_fern"></div>
-                    <p>Bird's Nest Fern</p>
-                    <p>$99.00</p>
+                    <a href="#">
+                        <div><img src="images/birds_nest_fern.png" alt="birds_nest_fern"></div>
+                        <p>Bird's Nest Fern</p>
+                        <p>$99.00</p>
+                    </a>
                 </article>
                 <article>
-                    <div><img src="images/broadleaf_lady_palm.png" alt="broadleaf_lady_palm"></div>
-                    <p>Broadleaf Lady Palm</p>
-                    <p>$59.00</p>
+                    <a href="#">
+                        <div><img src="images/broadleaf_lady_palm.png" alt="broadleaf_lady_palm"></div>
+                        <p>Broadleaf Lady Palm</p>
+                        <p>$59.00</p>
+                    </a>
                 </article>
                 <article>
-                    <div><img src="images/chinese_evergreen.png" alt="chinese_evergreen"></div>
-                    <p>Chinese Evergreen</p>
-                    <p>$39.00</p>
+                    <a href="#">
+                        <div><img src="images/chinese_evergreen.png" alt="chinese_evergreen"></div>
+                        <p>Chinese Evergreen</p>
+                        <p>$39.00</p>
+                    </a>
                 </article>
             </div>
             <div class="catalog_second_block_links">
@@ -124,13 +142,13 @@
                     <li><a href="#">2</a></li>
                     <li><a href="#">3</a></li>
                     <li><a href="#">4</a></li>
-                    <li><a href="#"><img src="images/Arrow_Right_2.svg" alt="Arrow_Right"></a></li>
+                    <li><a href="#"></a></li>
                 </ul>
             </div>
         </div>
     </section>
     <section class="summer_collection">
-        <div class="container_third_section">
+        <div class="container_summer_collection_section">
             <article>
                 <img src="images/image_14.png" alt="flower">
                 <div>
@@ -152,41 +170,50 @@
         </div>
     </section>
     <section class="blog">
-        <div class="container">
+        <div class="container_blog_section">
             <h2>Our Blog Posts</h2>
-            <p>We are an online plant shop offering a wide range of cheap and trendy plants. </p>
-            <div class="articles">
+            <p class="text_our_blog_posts">We are an online plant shop offering a wide range of cheap and trendy
+                plants. </p>
+            <div class="articles_blog_section">
                 <article>
                     <img src="images/01.jpg" alt="flower">
-                    <p>September 12 | Read in 6 minutes</p>
-                    <h3>Cactus & Succulent
-                        Care Tips</h3>
-                    <p>Cacti are succulents are easy care plants for any home or patio. </p>
-                    <a href="#">Read More</a>
+                    <div>
+                        <p>September 12 | Read in 6 minutes</p>
+                        <h3>Cactus & Succulent
+                            Care Tips</h3>
+                        <p>Cacti are succulents are easy care plants for any home or patio. </p>
+                        <a href="#">Read More</a>
+                    </div>
                 </article>
                 <article>
                     <img src="images/02.png" alt="flower">
-                    <p>September 13 | Read in 2 minutes</p>
-                    <h3>Top 10 Succulents for
-                        Your Home</h3>
-                    <p>Best in hanging baskets. Prefers medium to highlight.</p>
-                    <a href="#">Read More</a>
+                    <div>
+                        <p>September 13 | Read in 2 minutes</p>
+                        <h3>Top 10 Succulents for
+                            Your Home</h3>
+                        <p>Best in hanging baskets. Prefers medium to highlight.</p>
+                        <a href="#">Read More</a>
+                    </div>
                 </article>
                 <article>
                     <img src="images/03.png" alt="flower">
-                    <p>September 15 | Read in 3 minutes</p>
-                    <h3>Cacti & Succulent
-                        Care Tips</h3>
-                    <p>Cacti and succulents thrive in containers and because most are...</p>
-                    <a href="#">Read More</a>
+                    <div>
+                        <p>September 15 | Read in 3 minutes</p>
+                        <h3>Cacti & Succulent
+                            Care Tips</h3>
+                        <p>Cacti and succulents thrive in containers and because most are...</p>
+                        <a href="#">Read More</a>
+                    </div>
                 </article>
                 <article>
                     <img src="images/04.png" alt="flower">
-                    <p>September 15 | Read in 2 minutes</p>
-                    <h3>Best Houseplants
-                        Room by Room</h3>
-                    <p>The benefits of houseplants are endless. In addition to..</p>
-                    <a href="#">Read More</a>
+                    <div>
+                        <p>September 15 | Read in 2 minutes</p>
+                        <h3>Best Houseplants
+                            Room by Room</h3>
+                        <p>The benefits of houseplants are endless. In addition to...</p>
+                        <a href="#">Read More</a>
+                    </div>
                 </article>
             </div>
         </div>
