added drop down menu

--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
         <a href="#"><img src="images/logo.svg" alt="logo"></a>
         <nav>
             <ul class="links_nav_ul">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Plant Care</a></li>
-                <li><a href="#">Blogs</a></li>
+                <li><a href="#" class="links_nav_a">Home</a></li>
+                <li><a href="#" class="links_nav_a">Shop</a></li>
+                <li class="parental_li_drop_down">
+                    <a href="#" class="links_nav_a">Plant Care</a>
+                    <ul class="drop_down_ul_first">
+                        <li><a href="#">Drainage</a></li>
+                        <li><a href="#">Fungicides</a></li>
+                        <li><a href="#">Fertilizer</a></li>
+                        <li><a href="#">Priming</a></li>
+                    </ul>
+                </li>
+                <li><a href="#" class="links_nav_a">Blogs</a></li>
             </ul>
         </nav>
         <a href="registration.html" class="login_link_index">Login</a>
