reworked styles on drop down menu, added buttons to catalog section

--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
                     </a>
                 </article>
                 <article>
+                    <ul class="ul_buttons">
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
                     <a href="#">
                         <div><img src="images/angel_wing_begonia.png" alt="angel_wing_begonia"></div>
                         <p>Angel Wing Begonia</p>
@@ -95,6 +100,7 @@
                 </article>
                 <article>
                     <a href="#">
+                        <span class="sale">13% OFF</span>
                         <div><img src="images/african_violet.png" alt="african_violet"></div>
                         <p>African Violet</p>
                         <p>$199.00</p>
