added last section

--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
             </div>
             <div class="cards_of_items">
                 <article>
+                    <ul class="ul_buttons">
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
                     <a href="#">
                         <div><img src="images/barberton_daisy.png" alt="barberton_daisy"></div>
                         <p>Barberton Daisy</p>
@@ -99,14 +104,24 @@
                     </a>
                 </article>
                 <article>
+                    <ul class="ul_buttons">
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
                     <a href="#">
                         <span class="sale">13% OFF</span>
                         <div><img src="images/african_violet.png" alt="african_violet"></div>
                         <p>African Violet</p>
-                        <p>$199.00</p>
+                        <p>$199.00 <span class="sale_prise">$229.00</span></p>
                     </a>
                 </article>
                 <article>
+                    <ul class="ul_buttons">
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
                     <a href="#">
                         <div><img src="images/beach_spider_lily.png" alt="beach_spider_lily" class="img_spider_lily">
                         </div>
@@ -115,6 +130,11 @@
                     </a>
                 </article>
                 <article>
+                    <ul class="ul_buttons">
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
                     <a href="#">
                         <div><img src="images/blushing_bromeliad.png" alt="blushing_bromeliad"></div>
                         <p>Blushing Bromeliad</p>
@@ -122,6 +142,11 @@
                     </a>
                 </article>
                 <article>
+                    <ul class="ul_buttons">
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
                     <a href="#">
                         <div><img src="images/aluminum_plant.png" alt="aluminum_plant"></div>
                         <p>Aluminum Plant</p>
@@ -129,6 +154,11 @@
                     </a>
                 </article>
                 <article>
+                    <ul class="ul_buttons">
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
                     <a href="#">
                         <div><img src="images/birds_nest_fern.png" alt="birds_nest_fern"></div>
                         <p>Bird's Nest Fern</p>
@@ -136,6 +166,11 @@
                     </a>
                 </article>
                 <article>
+                    <ul class="ul_buttons">
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
                     <a href="#">
                         <div><img src="images/broadleaf_lady_palm.png" alt="broadleaf_lady_palm"></div>
                         <p>Broadleaf Lady Palm</p>
@@ -143,6 +178,11 @@
                     </a>
                 </article>
                 <article>
+                    <ul class="ul_buttons">
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
                     <a href="#">
                         <div><img src="images/chinese_evergreen.png" alt="chinese_evergreen"></div>
                         <p>Chinese Evergreen</p>
@@ -229,6 +269,52 @@
                         <a href="#">Read More</a>
                     </div>
                 </article>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container_pre_footer">
+            <div class="info_part_container_pre_footer">
+                <article>
+                    <img src="images/garden_care.png" alt="garden_care" class="pre_footer_img">
+                    <h3>Garden Care</h3>
+                    <p>We are an online plant shop offering a wide range of cheap and trendy plants.</p>
+                </article>
+                <article>
+                    <img src="images/plant_renovation.png" alt="plant_renovation" class="pre_footer_img">
+                    <h3>Plant Renovation</h3>
+                    <p>We are an online plant shop offering a wide range of cheap and trendy plants.</p>
+                </article>
+                <article>
+                    <img src="images/watering_garden.png" alt="watering_garden" class="pre_footer_img">
+                    <h3>Watering Garden</h3>
+                    <p>We are an online plant shop offering a wide range of cheap and trendy plants.</p>
+                </article>
+                <div>
+                    <h3>Would you like to join newsletters?</h3>
+                    <form name="newsletters_subscription" method="post" action="">
+                        <input name="email_subscription" id="email_subscription" type="email"
+                               placeholder="enter your email address...">
+                        <button type="submit">Join</button>
+                    </form>
+                    <p>We usually post offers and challenges in newsletter. We’re your online houseplant destination. We
+                        offer a wide range of houseplants and accessories shipped directly from our (green)house to
+                        yours! </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="contacts_part_container_pre_footer">
+            <a href="#"><img src="images/logo.svg" alt="logo"></a>
+            <div class="pre_footer_address">
+                <p>70 West Buckingham Ave. Farmingdale, NY 11735</p>
+            </div>
+            <div class="pre_footer_email">
+                <a href="mailto:contact@greenshop.com">contact@greenshop.com</a>
+            </div>
+            <div class="pre_footer_phone">
+                <a href="tel:+88 01911 717 490">+88 01911 717 490</a>
             </div>
         </div>
     </section>
