--- a/index.html
+++ b/index.html
@@ -307,18 +307,61 @@
     <section>
         <div class="contacts_part_container_pre_footer">
             <a href="#"><img src="images/logo.svg" alt="logo"></a>
-            <div class="pre_footer_address">
-                <p>70 West Buckingham Ave. Farmingdale, NY 11735</p>
-            </div>
-            <div class="pre_footer_email">
-                <a href="mailto:contact@greenshop.com">contact@greenshop.com</a>
-            </div>
-            <div class="pre_footer_phone">
-                <a href="tel:+88 01911 717 490">+88 01911 717 490</a>
-            </div>
+            <p class="pre_footer_address">70 West Buckingham Ave. Farmingdale, NY 11735</p>
+            <a href="mailto:contact@greenshop.com" class="pre_footer_email">contact@greenshop.com</a>
+            <a href="tel:+88 01911 717 490" class="pre_footer_phone">+88 01911 717 490</a>
         </div>
     </section>
 </main>
-<footer></footer>
+<footer>
+    <div class="footer_container">
+        <div class="footer_my_account">
+            <h3>My Account</h3>
+            <ul>
+                <li><a href="#">My Account</a></li>
+                <li><a href="#">Our stores</a></li>
+                <li><a href="#">Contact us</a></li>
+                <li><a href="#">Career</a></li>
+                <li><a href="#">Specials</a></li>
+            </ul>
+        </div>
+        <div class="footer_help_guide">
+            <h3>Help & Guide</h3>
+            <ul>
+                <li><a href="#">Help Center</a></li>
+                <li><a href="#">How to Buy</a></li>
+                <li><a href="#">Shipping & Deliver</a></li>
+                <li><a href="#">Product Policy</a></li>
+                <li><a href="#">How to Return</a></li>
+            </ul>
+        </div>
+        <div class="footer_categories">
+            <h3>Categories</h3>
+            <ul>
+                <li><a href="#">House Plants</a></li>
+                <li><a href="#">Potter Plants</a></li>
+                <li><a href="#">Seeds</a></li>
+                <li><a href="#">Small Plants</a></li>
+                <li><a href="#">Accessories</a></li>
+            </ul>
+        </div>
+        <div class="footer_social_payment">
+            <div class="footer_social">
+                <h3>Social Media</h3>
+                <ul>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                </ul>
+            </div>
+            <div class="footer_payment">
+                <h3>We accept</h3>
+                <img src="images/payment_services.png" alt="payment_services">
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
