--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@
             </div>
         </div>
     </div>
+    <p class="rights_reserved">© 2021 GreenShop. All Rights Reserved.</p>
 </footer>
 </body>
 </html>
